Find query remaining time is calculated incorrectly in mongos

XMLWordPrintableJSON

    • Query Execution
    • Fully Compatible
    • ALL
    • v8.2, v8.1, v8.0, v7.0
    • QE 2025-08-18
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      See investigation details and repro script in HELP-79061.
      A few options to fix it:

      1. Using deadline instead of maxTime to calculate remaining time
      2. Save the original maxTime as well in DeadlineState returned by opCtx->pushArtificialDeadline()
      3. Add elapsed time to maxTime in opCtx->computeMaxTimeFromDeadline()

            Assignee:
            Zixuan Zhuang
            Reporter:
            Zixuan Zhuang
            Votes:
            0 Vote for this issue
            Watchers:
            19 Start watching this issue

              Created:
              Updated:
              Resolved: