SERVER-108581 Add maxTime to DeadlineState to avoid double count execution time (#39628)

GitOrigin-RevId: e68790581e9b2f45184527f2fbdbba3ca59b5351