src/mongo/db/operation_context.h
@@ -789,12 +789,14 @@ public:
     decltype(auto) runWithoutInterruptionExceptAtGlobalShutdown(Callback&& cb) {
         try {
             bool prevIgnoringInterrupts = _ignoreInterrupts;
-            DeadlineState prevDeadlineState{_deadline, _timeoutError, _hasArtificialDeadline};
+            DeadlineState prevDeadlineState{
+                _deadline, _maxTime, _timeoutError, _hasArtificialDeadline};
             ScopeGuard guard([&] {
                 // Restore the original interruption and deadline state.
                 stdx::lock_guard lg(*_client);
                 _ignoreInterrupts = prevIgnoringInterrupts;
-                setDeadlineByDate(prevDeadlineState.deadline, prevDeadlineState.error);
+                setDeadlineAndMaxTime(
+                    prevDeadlineState.deadline, prevDeadlineState.maxTime, prevDeadlineState.error);
                 _hasArtificialDeadline = prevDeadlineState.hasArtificialDeadline;
                 _markKilledIfDeadlineRequires();
             });
@@ -831,7 +833,7 @@ private:
         stdx::condition_variable& cv, BasicLockableAdapter m, Date_t deadline) noexcept override;
 
     DeadlineState pushArtificialDeadline(Date_t deadline, ErrorCodes::Error error) override {
-        DeadlineState ds{_deadline, _timeoutError, _hasArtificialDeadline};
+        DeadlineState ds{_deadline, _maxTime, _timeoutError, _hasArtificialDeadline};
 
         _hasArtificialDeadline = true;
         setDeadlineByDate(std::min(_deadline, deadline), error);
@@ -840,7 +842,7 @@ private:
     }
 
     void popArtificialDeadline(DeadlineState ds) override {
-        setDeadlineByDate(ds.deadline, ds.error);
+        setDeadlineAndMaxTime(ds.deadline, ds.maxTime, ds.error);
         _hasArtificialDeadline = ds.hasArtificialDeadline;
 
         _markKilledIfDeadlineRequires();
